--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,7 +15,7 @@ services:
     ports:
       - "9090:9090"
     volumes:
-      - ${PWD}/prometheus:/etc/prometheus:ro
+      - ./prometheus:/etc/prometheus
       - prometheus-data:/prometheus
     restart: unless-stopped
     command:
@@ -28,8 +28,8 @@ services:
       - "3001:3000"
     volumes:
       - grafana-data:/var/lib/grafana
-      - ${PWD}/grafana/provisioning:/etc/grafana/provisioning:ro
-      - grafana-dashboards:/var/lib/grafana/dashboards
+      - ./grafana/provisioning:/etc/grafana/provisioning
+      - ./grafana/dashboards:/var/lib/grafana/dashboards
     environment:
       - GF_DASHBOARDS_DEFAULT_HOME_DASHBOARD_PATH=/var/lib/grafana/dashboards/default.json
       - GF_SECURITY_ADMIN_USER=admin
