--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,9 +2,7 @@ version: '3'
 
 volumes:
   prometheus-data:
-    driver: local
   grafana-data:
-    driver: local
   grafana-dashboards:
     driver: local
 
@@ -15,7 +13,9 @@ services:
     ports:
       - "9090:9090"
     volumes:
-      - ./prometheus:/etc/prometheus
+      - type: bind
+        source: ./prometheus
+        target: /etc/prometheus
       - prometheus-data:/prometheus
     restart: unless-stopped
     command:
@@ -28,8 +28,12 @@ services:
       - "3001:3000"
     volumes:
       - grafana-data:/var/lib/grafana
-      - ./grafana/provisioning:/etc/grafana/provisioning
-      - ./grafana/dashboards:/var/lib/grafana/dashboards
+      - type: bind
+        source: ./grafana/provisioning
+        target: /etc/grafana/provisioning
+      - type: bind
+        source: ./grafana/dashboards
+        target: /var/lib/grafana/dashboards
     environment:
       - GF_DASHBOARDS_DEFAULT_HOME_DASHBOARD_PATH=/var/lib/grafana/dashboards/default.json
       - GF_SECURITY_ADMIN_USER=admin
