--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -43,9 +43,54 @@ services:
         cat > /etc/prometheus/web.yml << 'EOL'
         basic_auth_users:
           admin: $2y$10$zr7pLh1xDCMWVCnL6LsLkO7eo47AN91aMkRxQgPOIcMH9iAGNzTZK
+        
+        tls_server_config:
+          cipher_suites:
+            - TLS_ECDHE_RSA_WITH_AES_128_GCM_SHA256
+            - TLS_ECDHE_ECDSA_WITH_AES_128_GCM_SHA256
+            - TLS_ECDHE_RSA_WITH_AES_256_GCM_SHA384
+            - TLS_ECDHE_ECDSA_WITH_AES_256_GCM_SHA384
+          min_version: TLS12
+        
+        http_server_config:
+          http2: true
+        
+        # IP-based access control
+        # Allowed IPs (examples - replace with your trusted IPs)
+        # Format: CIDR notation
+        http_server_config:
+          http2: true
+        
+        # IP-based access control
+        http_server_config:
+          http2: true
+          headers:
+            Content-Security-Policy: "default-src 'self'"
+            X-Content-Type-Options: "nosniff"
+            X-Frame-Options: "deny"
+            X-XSS-Protection: "1; mode=block"
+          cors_origins: []  # Empty list disables CORS
+        
+        # Add your trusted IP addresses here
+        # For example: ["192.168.1.0/24", "10.0.0.5/32"]
+        # Use /32 for single IP addresses
+        # Use broader CIDR for ranges
+        http_config:
+          forward_headers:
+            - "X-Forwarded-For"
+          address_filter:
+            accept:
+              - "127.0.0.1/8"  # localhost
+              - "10.0.0.0/8"    # private range
+              - "172.16.0.0/12" # private range
+              - "192.168.0.0/16" # private range
+              # Add your specific trusted IPs below
+              # - "203.0.113.42/32" # example specific external IP
+            reject:
+              - "0.0.0.0/0"    # reject all other IPs
         EOL
         
-        /bin/prometheus --config.file=/etc/prometheus/prometheus.yml --storage.tsdb.path=/prometheus --web.config.file=/etc/prometheus/web.yml
+        /bin/prometheus --config.file=/etc/prometheus/prometheus.yml --storage.tsdb.path=/prometheus --web.config.file=/etc/prometheus/web.yml --web.listen-address=0.0.0.0:9090
 
   grafana:
     image: grafana/grafana:latest
