--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -85,7 +85,7 @@ services:
               - "172.16.0.0/12" # private range
               - "192.168.0.0/16" # private range
               # Add your specific trusted IPs below
-              # - "203.0.113.42/32" # example specific external IP
+              - "57.128.64.89/32" # example specific external IP
             reject:
               - "0.0.0.0/0"    # reject all other IPs
         EOL
