--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,7 +14,10 @@ services:
       - prometheus-data:/prometheus
     restart: unless-stopped
     environment:
-      - ADMIN_PASSWORD_HASH=${PROMETHEUS_ADMIN_PASSWORD_HASH}
+      - BACTOCLOUD_USERNAME=${BACTOCLOUD_USERNAME}
+      - BACTOCLOUD_PASSWORD=${BACTOCLOUD_PASSWORD}
+      - BACTOCLOUD_HOST=${BACTOCLOUD_HOST}
+      - BACTOCLOUD_PORT=${BACTOCLOUD_PORT}
     entrypoint:
       - /bin/sh
       - -c
@@ -47,31 +50,7 @@ services:
             metrics_path: "/metrics"
         EOL
         
-        # Create basic auth file
-        mkdir -p /etc/prometheus
-        touch /etc/prometheus/web.yml
-        cat > /etc/prometheus/web.yml << EOL
-        basic_auth_users:
-          admin: "${ADMIN_PASSWORD_HASH}"
-        
-        tls_server_config:
-          cipher_suites:
-            - TLS_ECDHE_RSA_WITH_AES_128_GCM_SHA256
-            - TLS_ECDHE_ECDSA_WITH_AES_128_GCM_SHA256
-            - TLS_ECDHE_RSA_WITH_AES_256_GCM_SHA384
-            - TLS_ECDHE_ECDSA_WITH_AES_256_GCM_SHA384
-          min_version: TLS12
-        
-        http_server_config:
-          http2: true
-          headers:
-            Content-Security-Policy: "default-src 'self'"
-            X-Content-Type-Options: "nosniff"
-            X-Frame-Options: "deny"
-            X-XSS-Protection: "1; mode=block"
-        EOL
-        
-        /bin/prometheus --config.file=/etc/prometheus/prometheus.yml --storage.tsdb.path=/prometheus --web.config.file=/etc/prometheus/web.yml --web.listen-address=0.0.0.0:9090
+        /bin/prometheus --config.file=/etc/prometheus/prometheus.yml --storage.tsdb.path=/prometheus --web.listen-address=0.0.0.0:9090
 
   grafana:
     image: grafana/grafana:latest
