--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -221,7 +221,7 @@ services:
       - "3100:3100"
     volumes:
       - loki-data:/loki
-    command: -config.file=/etc/loki/local-config.yaml
+    command: -config.file=/etc/loki/local-config.yaml -config.expand-env=true
     restart: unless-stopped
     entrypoint:
       - /bin/sh
@@ -289,7 +289,7 @@ services:
     volumes:
       - /var/log:/var/log
       - /var/lib/docker/containers:/var/lib/docker/containers:ro
-    command: -config.file=/etc/promtail/config.yml
+    command: -config.file=/etc/promtail/config.yml -config.expand-env=true
     depends_on:
       - loki
     restart: unless-stopped
@@ -344,7 +344,7 @@ services:
                 password: "\${PROMTAIL_API_PASSWORD}"
         EOL
         
-        /usr/bin/promtail -config.file=/etc/promtail/config.yml
+        /usr/bin/promtail -config.file=/etc/promtail/config.yml -config.expand-env=true
 
   node_exporter:
     image: quay.io/prometheus/node-exporter:latest
