--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -70,12 +70,17 @@ services:
       - GF_SECURITY_ADMIN_USER=admin
       - GF_SECURITY_ADMIN_PASSWORD=admin
       - GF_INSTALL_PLUGINS=grafana-loki-datasource
+      - GF_PATHS_PROVISIONING=/etc/grafana/provisioning
+      - GF_DASHBOARDS_DEFAULT_HOME_DASHBOARD_PATH=/etc/grafana/dashboards/default.json
     restart: unless-stopped
+    user: "0:0" # Run as root temporarily to avoid permission issues
     entrypoint:
       - /bin/bash
       - -c
       - |
         mkdir -p /etc/grafana/provisioning/datasources
+        mkdir -p /etc/grafana/dashboards
+        
         cat > /etc/grafana/provisioning/datasources/datasource.yml << 'EOL'
         apiVersion: 1
 
@@ -94,8 +99,7 @@ services:
             editable: true
         EOL
         
-        mkdir -p /var/lib/grafana/dashboards
-        cat > /var/lib/grafana/dashboards/default.json << 'EOL'
+        cat > /etc/grafana/dashboards/default.json << 'EOL'
         {
           "annotations": {
             "list": []
@@ -215,12 +219,13 @@ services:
         }
         EOL
         
-        cat > /etc/grafana/grafana.ini << 'EOL'
-        [dashboards]
-        default_home_dashboard_path = /var/lib/grafana/dashboards/default.json
-        EOL
+        # Set proper permissions
+        chown -R grafana:grafana /etc/grafana /var/lib/grafana
         
-        /run.sh
+        # Configure dashboard path through environment variable instead of grafana.ini
+        
+        # Start Grafana as the grafana user
+        gosu grafana /run.sh
     networks:
       - monitoring
 
