--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -73,14 +73,16 @@ services:
       - GF_PATHS_PROVISIONING=/etc/grafana/provisioning
       - GF_DASHBOARDS_DEFAULT_HOME_DASHBOARD_PATH=/etc/grafana/dashboards/default.json
     restart: unless-stopped
-    user: "0:0" # Run as root temporarily to avoid permission issues
+    user: "472" # Use the UID that Grafana normally runs as
     entrypoint:
       - /bin/bash
       - -c
       - |
+        # Create necessary directories with proper permissions
         mkdir -p /etc/grafana/provisioning/datasources
         mkdir -p /etc/grafana/dashboards
         
+        # Configure datasources
         cat > /etc/grafana/provisioning/datasources/datasource.yml << 'EOL'
         apiVersion: 1
 
@@ -99,6 +101,7 @@ services:
             editable: true
         EOL
         
+        # Configure default dashboard
         cat > /etc/grafana/dashboards/default.json << 'EOL'
         {
           "annotations": {
@@ -219,13 +222,8 @@ services:
         }
         EOL
         
-        # Set proper permissions
-        chown -R grafana:grafana /etc/grafana /var/lib/grafana
-        
-        # Configure dashboard path through environment variable instead of grafana.ini
-        
-        # Start Grafana as the grafana user
-        gosu grafana /run.sh
+        # Start Grafana directly
+        /run.sh
     networks:
       - monitoring
 
@@ -276,7 +274,7 @@ services:
             - from: 2020-10-24
               store: boltdb-shipper
               object_store: filesystem
-              schema: v11
+              schema: v13
               index:
                 prefix: index_
                 period: 24h
