--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -69,20 +69,12 @@ services:
     environment:
       - GF_SECURITY_ADMIN_USER=admin
       - GF_SECURITY_ADMIN_PASSWORD=admin
-      - GF_INSTALL_PLUGINS=grafana-loki-datasource
-      - GF_PATHS_PROVISIONING=/etc/grafana/provisioning
-      - GF_DASHBOARDS_DEFAULT_HOME_DASHBOARD_PATH=/etc/grafana/dashboards/default.json
     restart: unless-stopped
-    user: "472" # Use the UID that Grafana normally runs as
     entrypoint:
       - /bin/bash
       - -c
       - |
-        # Create necessary directories with proper permissions
         mkdir -p /etc/grafana/provisioning/datasources
-        mkdir -p /etc/grafana/dashboards
-        
-        # Configure datasources
         cat > /etc/grafana/provisioning/datasources/datasource.yml << 'EOL'
         apiVersion: 1
 
@@ -93,16 +85,10 @@ services:
             url: http://prometheus:9090
             isDefault: true
             editable: true
-          
-          - name: Loki
-            type: loki
-            access: proxy
-            url: http://loki:3100
-            editable: true
         EOL
         
-        # Configure default dashboard
-        cat > /etc/grafana/dashboards/default.json << 'EOL'
+        mkdir -p /var/lib/grafana/dashboards
+        cat > /var/lib/grafana/dashboards/default.json << 'EOL'
         {
           "annotations": {
             "list": []
@@ -222,11 +208,14 @@ services:
         }
         EOL
         
-        # Start Grafana directly
+        cat > /etc/grafana/grafana.ini << 'EOL'
+        [dashboards]
+        default_home_dashboard_path = /var/lib/grafana/dashboards/default.json
+        EOL
+        
         /run.sh
     networks:
       - monitoring
-
   loki:
     image: grafana/loki:latest
     container_name: loki
