--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -370,7 +370,14 @@ services:
             into: loki_write
         EOL
         
-        /bin/grafana-alloy run --config.file=/etc/alloy/config.yaml
+        # Find the alloy binary and run it with the correct path
+        ALLOY_BIN=$(find / -name "alloy" -type f -executable 2>/dev/null | head -1)
+        if [ -z "$ALLOY_BIN" ]; then
+          echo "Error: Could not find alloy binary in the container"
+          exit 1
+        fi
+        echo "Found alloy binary at: $ALLOY_BIN"
+        $ALLOY_BIN run --config.file=/etc/alloy/config.yaml
     networks:
       - monitoring
     ports:
